After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750641 - JNI: jaw_object_ref_relation_set is missing
JNI: jaw_object_ref_relation_set is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-09 14:12 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-26 21:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (9.91 KB, patch)
2015-06-09 14:16 UTC, Magdalen Berns (irc magpie)
none Details | Review
Create jaw_impl_get_atk_relation_type_from_java_key (1.85 KB, patch)
2015-06-09 15:05 UTC, Magdalen Berns (irc magpie)
none Details | Review
Patch to include function (6.04 KB, patch)
2015-06-25 18:07 UTC, Magdalen Berns (irc magpie)
committed Details | Review
minor formatting (1.03 KB, patch)
2015-06-25 18:10 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-09 14:12:44 UTC
jaw_object_ref_relation_set is needed to wrap the getAccessibleRelationSet method from AccessibleContext.

This is currently handled in jawimpl but it should be a jawobject method.
Comment 1 Magdalen Berns (irc magpie) 2015-06-09 14:16:31 UTC
Created attachment 304865 [details] [review]
Patch to address problem
Comment 2 Magdalen Berns (irc magpie) 2015-06-09 15:05:07 UTC
Created attachment 304869 [details] [review]
Create jaw_impl_get_atk_relation_type_from_java_key
Comment 3 Magdalen Berns (irc magpie) 2015-06-25 18:07:47 UTC
Created attachment 306126 [details] [review]
Patch to include function
Comment 4 Magdalen Berns (irc magpie) 2015-06-25 18:10:32 UTC
Created attachment 306127 [details] [review]
minor formatting
Comment 5 Magdalen Berns (irc magpie) 2015-06-25 18:11:05 UTC
Review of attachment 306127 [details] [review]:

Sorry accidentally marked as committed, I haven't committed it yet...
Comment 6 Magdalen Berns (irc magpie) 2015-06-26 20:55:03 UTC
Review of attachment 306126 [details] [review]:

Committed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=fe3cbcf53fd5da0ebaaae763a9ca91e5fb20570e
Comment 7 Magdalen Berns (irc magpie) 2015-06-26 20:55:50 UTC
Review of attachment 306127 [details] [review]:

Committed to master with https://git.gnome.org/browse/java-atk-wrapper/commit/?id=ef1d041ce555cc879e6e7ee760872d78868703bb