JNI: create jaw_object_ref_relation_set

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750641